metadata/objects/GRAXSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>GRAX by Harding Point Settings. https://grax.io</description>
    <fields>
        <fullName>ApiToken__c</fullName>
        <description>GRAX Settings : Heroku Setting ENGAGEMENTGRAPH_APITOKEN</description>
        <inlineHelpText>GRAX Settings : Heroku Setting ENGAGEMENTGRAPH_APITOKEN</inlineHelpText>
        <label>ApiToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchMaxExecutionNumber__c</fullName>
        <label>BatchMaxExecutionNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Organization_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Display Organization Name on the table</inlineHelpText>
        <label>Display Organization Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Outside_Records_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Display Outside Records Only</inlineHelpText>
        <label>Display Outside Records Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnableDeleteTab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Delete Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnableFieldTracking__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Field Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnableObjectTracking__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Object Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GRAX_API_Url__c</fullName>
        <label>GRAX API Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GRAX_Cloud_Path__c</fullName>
        <label>GRAX Cloud Path</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Flow_URL__c</fullName>
        <label>GRAX Flow URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GatewayToken__c</fullName>
        <description>GRAX Settings : Heroku Setting ENGAGEMENTGRAPH_GATEWAYTOKEN</description>
        <inlineHelpText>GRAX Settings : Heroku Setting ENGAGEMENTGRAPH_GATEWAYTOKEN</inlineHelpText>
        <label>GatewayToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graph_DB_Password__c</fullName>
        <defaultValue>&quot;b.o70mLuaAUEUO.BA1vM10dsFOjtEKm&quot;</defaultValue>
        <label>Graph DB Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graph_DB_URL__c</fullName>
        <defaultValue>&quot;https://db-ljovrmxu24s76s1jbphc.graphenedb.com:24780&quot;</defaultValue>
        <inlineHelpText>E.G. https://hobby-ilpalckeehocgbkeoncdnjal.dbs.graphenedb.com:24780</inlineHelpText>
        <label>Graph DB URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graph_DB_Username__c</fullName>
        <defaultValue>&quot;app81968631-13521279694483497&quot;</defaultValue>
        <inlineHelpText>Graph DB Username</inlineHelpText>
        <label>Graph DB Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heroku_App_Name__c</fullName>
        <description>Heroku Application Name</description>
        <inlineHelpText>Heroku Application Name</inlineHelpText>
        <label>Heroku App Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LicenseToken__c</fullName>
        <description>GRAX Settings : Heroku Setting ENGAGEMENTGRAPH_LICENSETOKEN</description>
        <inlineHelpText>GRAX Settings : Heroku Setting ENGAGEMENTGRAPH_LICENSETOKEN</inlineHelpText>
        <label>LicenseToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogAllErrors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LogAllErrors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaxNumberOfParentsOnHierarchyBackup__c</fullName>
        <label>MaxNumberOfParentsOnHierarchyBackup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxNumberOfRecordsPerPayload__c</fullName>
        <description>This value will be used to set the maximum number of records sent to GRAX in a single Payload. Values could be: 1, 2, 5, 10, 20, 25, 50, 100, 200, 400, 500, 1000, 2000</description>
        <inlineHelpText>This value will be used to set the maximum number of records sent to GRAX in a single Payload. Values could be: 1, 2, 5, 10, 20, 25, 50, 100, 200, 400, 500, 1000, 2000</inlineHelpText>
        <label>MaxNumberOfRecordsPerPayload</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postgres_URL__c</fullName>
        <description>Postgres URL used for Audit Trail</description>
        <inlineHelpText>Postgres URL used for Audit Trail</inlineHelpText>
        <label>PostgresURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueryLimit__c</fullName>
        <label>QueryLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QueryOrderBy__c</fullName>
        <label>QueryOrderBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graphdburl__c</fullName>
        <description>GRAX Settings : Heroku Setting GRAPHENEDB_URL</description>
        <inlineHelpText>GRAX Settings : Heroku Setting GRAPHENEDB_URL</inlineHelpText>
        <label>graphdburl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>s3accesskeyid__c</fullName>
        <description>s3accesskeyid used for Audit Tracking</description>
        <inlineHelpText>s3accesskeyid used for Audit Tracking</inlineHelpText>
        <label>s3accesskeyid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>s3bucket__c</fullName>
        <description>s3bucket Used for GRAX Audit Trail</description>
        <inlineHelpText>s3bucket Used for GRAX Audit Trail</inlineHelpText>
        <label>s3bucket</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>s3region__c</fullName>
        <label>s3region</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>s3secretaccesskey__c</fullName>
        <description>s3secretaccesskey used for GRAX Audit Trail</description>
        <inlineHelpText>s3secretaccesskey used for GRAX Audit Trail</inlineHelpText>
        <label>s3secretaccesskey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GRAX Settings</label>
</CustomObject>